[package]
name = "eeprom_programmer_command"
version = "0.2.3"
authors = ["Hideyuki Teramura <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "std" ]
display = []
std = []
serial = [ "embedded-hal", "nb" ]

[dependencies]
nb = { version = "1.0", optional = true }
embedded-hal = { version = "0.2", optional = true }
